<resources>
    <string name="app_name">Croissant</string>
    <string name="user_id"></string>
    <string name="user_name"></string>
    <string name="your_string_here">Or you can <u><strong>Register</strong></u></string>
    <string name="room_style"><u>Room</u></string>
    <string name="domainsite">https://croissant-santy-ruler.c9users.io</string>

    <declare-styleable name="idsforconferences">
        <attr name="id_conference" format="string" />
    </declare-styleable>

    <string name="noonegood">No one answered right</string>
    <string name="noonebad">No one answered wrong</string>
    <string name="correctAns">Correct Answer</string>
    <string name="WrongAnswer">Wrong Answers</string>
    <string name="personsRight">Persons are right</string>
    <string name="personsWrong">Persons are Wrong</string>
    <string name="personRight">Person is correct</string>
    <string name="personWrong">Person is wrong</string>

    <string name="noQuestionMesssage">Sorry there isnt questions in this conference</string>
    <string name="sorryMessage">So bad, no one answered this question</string>
    <string name="id">id</string>
    <string name="txtdate">dateOfQues</string>
    <string name="user">Lorem lipsum</string>
    <string name="send">Send</string>
    <string name="textboxmessage">255 character limit</string>
    <string name="cancel">cancel</string>
    <string name="logout">logout</string>
    <string name="writeMessage">Write your question :</string>
    <string name="buton1Conf">Ask question</string>
    <string name="buton2Conf">View Scores</string>
    <string name="buton3Conf">Back to Conferences</string>
    <string name="buton1Manage">Manage Question</string>
    <string name="buton2Manage">Create Trivia</string>
    <string name="titleConference">Select a Conference :</string>
    <string name="titlegraphics">Winners</string>
    <string name="pointsof"> points of a total of </string>
    <string name="scores_of_conference">Questions</string>
    <string name="first_paces">First Places</string>
    <string name="returnButton">return</string>
    <string name="deleteButton">delete</string>
    <string name="accept">Accept</string>
    <string name="titleScan">Scan the event QR code!</string>
    <string name="buttonScan">Scan QR</string>
    <string name="editQuestion">Edit question</string>
    <string name="emailTint">e-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="onHold">On Hold Question</string>
    <string name="sentQuestion">Sent Question</string>
    <string name="declinedQuestion">Declined Question</string>
    <string name="sendToTrivia">Sent to Trivia</string>
    <string name="edit">edit</string>
    <string name="decline">decline</string>
    <string name="nameConference">Name Conference</string>
    <string name="scores">Scores</string>
    <string name="question">Question</string>
    <string name="Read">Read</string>
    <string name="hi">Hi ,</string>
    <string name="activitybutton">See activity of event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="baseurl">https://croissant-santy-ruler.c9users.io/croissant/</string>
    <string name="eventapiurl">getEvent.php</string>
    <string name="imgUrl">https://croissant-santy-ruler.c9users.io/croissant-web/web/ImageConference/</string>


    <string name="primary">#009688</string>
    <string name="primary_dark">#00796B</string>
    <string name="primary_light">#B2DFDB</string>
    <string name="accent">#FF5722</string>
    <string name="primary_text">#212121</string>
    <string name="secondary_text">#727272</string>
    <string name="icons">#FFFFFF</string>
    <string name="divider">#B6B6B6</string>
    <string name="linecolor">#e1e1e1</string>
    <string name="graphicempty">#C8C8C8</string>
    <string name="grapsgood">#009688</string>
    <string name="grapsbad">#880000</string>
    <string name="graybackground">#EBEBEB</string>

</resources>
