<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/backgroundLogin">

    <RelativeLayout
        android:id="@+id/header"
        style="@style/contentBanner">
        <ImageView
            style="@style/imgLogo"
            android:src="@drawable/logo"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp">
        <ImageView
            android:id="@+id/lenguageUsa"
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:src="@drawable/usa"/>
        <ImageView
            android:id="@+id/lenguageMex"
            android:layout_toRightOf="@id/lenguageUsa"
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:src="@drawable/mex"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/titleLogin"
        style="@style/titleLogin"
        android:layout_below="@id/header"
        android:text="@string/signUp"/>

    <RelativeLayout
        android:id="@+id/line1"
        android:layout_below="@id/titleLogin"
        style="@style/divisionLogin"></RelativeLayout>


    <RelativeLayout
        android:id="@+id/contentEmail"
        android:layout_below="@id/line1"
        style="@style/contentsTxtsLogin">

        <ImageView
            android:id="@+id/imgEmail"
            style="@style/imgsTxtsLogin"
            android:src="@drawable/mail"/>

        <EditText
            android:id="@+id/txtEmail"
            style="@style/txtsLogin"
            android:hint="@string/emailTint"
            android:text="elkirk@gmail.com"
            android:layout_toRightOf="@id/imgEmail"></EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contentPassword"
        android:layout_below="@id/contentEmail"
        android:layout_marginTop="8dip"
        style="@style/contentsTxtsLogin">

        <ImageView
            android:id="@+id/imgPassword"
            style="@style/imgsTxtsLogin"
            android:src="@drawable/pass"/>

        <EditText
            android:id="@+id/txtPassword"
            style="@style/txtsLogin"
            android:hint="@string/password"
            android:text="12345"
            android:inputType="textPassword"
            android:layout_toRightOf="@id/imgPassword"></EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line2"
        android:layout_marginTop="30dip"
        android:layout_below="@id/contentPassword"
        style="@style/divisionLogin"></RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_below="@id/line2"
        android:onClick="showOther"
        style="@style/btnLogin"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_below="@id/btnLogin"
        style="@style/btnRegister"
        android:text="@string/your_string_here"/>


</RelativeLayout>