<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contentAskQuestion"
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:id="@+id/header"
        style="@style/contentBanner">
        <ImageView
            style="@style/imgLogo"
            android:src="@drawable/logo"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contentInfoUser"
        style="@style/contentInfoUser"
        android:layout_below="@id/header">
        <ImageView
            android:id="@+id/imgUser"
            android:alpha="1"
            style="@style/imgSpeaker"
            android:src="@drawable/user"/>
        <TextView
            android:id="@+id/nameUser"
            style="@style/nameUser"
            android:text="Lorem Ipsum"
            android:textColor="@color/backgroundColor"
            android:layout_toRightOf="@id/imgUser"
            android:layout_toLeftOf="@+id/btnLogout"/>
        <Button
            style="@style/btnLogout"
            android:id="@+id/btnLogout"
            android:text="@string/logout" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/contentsInfoConference"
        android:id="@+id/titleConference"
        android:layout_below="@id/contentInfoUser">
        <TextView
            style="@style/titleConference"
            android:id="@+id/conferenceTitle"
            android:text="My First Android App"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line1"
        android:layout_below="@id/titleConference"
        style="@style/divisions"></RelativeLayout>

    <RelativeLayout
        style="@style/contentsInfoConference"
        android:id="@+id/infoSpeaker"
        android:layout_below="@id/line1">
        <ImageView
            android:id="@+id/imgSpeaker"
            style="@style/imgSpeaker"
            android:src="@drawable/user_black"/>
        <TextView
            android:id="@+id/nameSpeaker"
            style="@style/nameSpeaker"
            android:text="Lorem Ipsum"
            android:layout_toRightOf="@id/imgSpeaker"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line2"
        android:layout_below="@id/infoSpeaker"
        style="@style/divisions"></RelativeLayout>

    <RelativeLayout
        style="@style/contentsInfoConference"
        android:id="@+id/infoConference"
        android:layout_below="@id/line2">
        <TextView
            style="@style/infoConference"
            android:id="@+id/timeConference"
            android:layout_width="100dip"
            android:text="23-20-2016\n23:01 pm"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <TextView
            style="@style/infoConference"
            android:id="@+id/conferencePlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="Room \nLaboratorio de redes y telecomunicaciones, Docencia 1"
            android:layout_toLeftOf="@id/timeConference"
            android:layout_marginRight="8dip"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@id/infoConference"
        android:alpha="0.1"
        android:background="@drawable/shadow"></RelativeLayout>

    <TextView
        android:id="@+id/titleAskQuestion"
        android:layout_below="@id/infoConference"
        style="@style/titleAskQuestion"
        android:text="@string/writeMessage"/>

    <ScrollView
        android:id="@+id/scrollAskQuestion"
        android:layout_below="@id/titleAskQuestion"
        style="@style/scrollAskQuestion">

        <EditText
            android:id="@+id/txtAskQuestion"
            style="@style/txtAskQuestion"
            android:maxLength="255"
            android:hint="@string/textboxmessage"/>

    </ScrollView>

    <LinearLayout
        android:id="@+id/contentBtnsAskQuestion"
        style="@style/contentBtnsAskQuestion">

        <Button
            android:id="@+id/btnSend"
            style="@style/btnsAskQuestion"
            android:onClick="sendQuestion"
            android:text="@string/send"/>

        <Button
            android:id="@+id/btnCancel"
            style="@style/btnsAskQuestion"
            android:onClick="showConference"
            android:text="@string/cancel"/>
    </LinearLayout>

</RelativeLayout>