<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="4"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="3">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/burbuja"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wait_comment"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:padding="10dp"
        android:tag="2"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/id"
            android:id="@+id/idOfQuestion"
            android:visibility="invisible"
            />
        <TextView
            style="@style/message"
            android:id="@+id/dateOfQues"
            android:text="dateOfQues"
            android:textSize="18sp"
            android:textColor="@color/optionsModerator"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:id="@+id/msName"
            android:textColor="@color/optionsModerator"
            style="@style/message"
            android:textSize="18sp"
            android:text="Lorem lipsum"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"

            />
        <EditText
            android:textColor="@color/questionColor"
            android:id="@+id/contentQuestion"
            style="@style/messageCont"
            android:textSize="18sp"
            android:editable="false"
            android:background="@android:color/transparent"
            android:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
            android:layout_below="@+id/msName"
            android:layout_alignParentLeft="true"
            />

        <RelativeLayout
            android:id = "@+id/contentdecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentQuestion"
            style="@style/iconContainer"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/decline"
                style="@style/imgIconsA"

                android:src="@drawable/delete"
                />
            <TextView
                android:id="@+id/declineText"
                style="@style/iconTextWait"
                android:text="@string/decline"
                android:layout_below="@+id/decline"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id = "@+id/contentedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentQuestion"
            android:layout_toLeftOf="@+id/contentdecline"
            android:tag="1"
            style="@style/iconContainer">
            <ImageView
                android:id="@+id/edit"
                style="@style/imgIconsA"
                android:src="@drawable/edit"
                />
            <TextView
                android:id="@+id/editText"
                style="@style/iconTextWait"
                android:text="@string/edit"
                android:layout_below="@+id/edit"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id = "@+id/contentsend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentQuestion"
            android:layout_toLeftOf="@+id/contentedit"
            style="@style/iconContainer">
            <ImageView
                android:id="@+id/send"
                style="@style/imgIconsA"
                android:src="@drawable/send"
                />
            <TextView
                android:id="@+id/sendText"
                style="@style/iconTextWait"
                android:text="@string/send"
                android:layout_below="@+id/send"
                />
        </RelativeLayout>




    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/burbuja"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-10dp"
        android:layout_marginRight="-10dp">
        <ImageView
            android:id="@+id/imgSpeaker"
            style="@style/imgSpeaker"
            android:alpha="1"
            android:layout_width="100dip"
            android:src="@drawable/triangled"
           />

    </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>